<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_love"
        android:orderInCategory="100"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/action_love"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_to"
        android:orderInCategory="100"
        android:title="@string/action_add_to"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_watch"
        android:orderInCategory="100"
        android:title="@string/action_add_to_watch"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>